<resources>
    <string name="app_name">ProcOffload</string>
    <string name="app_vers">0.1.8</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user">This user is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"The device contacts need to be read."</string>
    <string name="permission_rationale_storage">"The device storage needs to be read."</string>
    <string name="action_main_settings">Settings</string>
    <string name="action_main_about">About</string>
    <string name="action_main_exit">Exit</string>
    <string name="use_input_single_select">Use the input below to select a file for processing. When it is uploaded you will be assigned a processing id for the computation.</string>
    <string name="user_review_string">When a user has been assigned processing id(s) for the computation, the task(s) can be reviewed by pressing the button below.</string>
    <string name="connect_info_string">CARLETON1@222.222.222.222:65505</string>
    <string name="proc_info_string">TOTAL: 2000 DONE: 1999 RUN:1</string>
    <string name="about_info_string">This application is to aid in offload computing functionality. The app was designed for Richard Yu at Carleton University in 2016 by Joseph Mitchell.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
</resources>
