<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="ninja.bitnet.cpuoffload.MainProcOffload"
tools:showIn="@layout/activity_main_cpuoffloader">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_centerHorizontal="true"
        android:text="Main Function"
        android:id="@+id/textViewTitle"
        />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="Send Task"
    android:id="@+id/textView"
    android:layout_below="@+id/textViewTitle"
    android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_input_single_select"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@android:drawable/arrow_up_float"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_below="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Review Task"
        android:id="@+id/textView3"
        android:layout_below="@+id/fab_send"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_review_string"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@android:drawable/arrow_down_float"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_below="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="select file"
        android:id="@+id/send_file"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/fab_send"
        android:textSize="@dimen/abc_action_bar_overflow_padding_end_material" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:text="@string/connect_info_string"
        android:textSize="@dimen/abc_action_bar_overflow_padding_end_material"
        android:textAlignment="center"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_toStartOf="@+id/fab_check"
        android:enabled="false" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:text="@string/proc_info_string"
        android:textSize="@dimen/abc_action_bar_overflow_padding_end_material"
        android:textAlignment="center"
        android:layout_below="@+id/editText"
        android:layout_alignEnd="@+id/send_file"
        android:layout_alignStart="@+id/editText"
        android:enabled="false" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="About"
        android:id="@+id/textView5"
        android:layout_below="@+id/editText2"
        android:layout_alignStart="@+id/textView3" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_info_string"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/editText2"
        android:textAlignment="center" />
</RelativeLayout>
